<resources>
    <string name="app_name">Desafio_02_Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeate_password">Repeate Password</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="pratos_principais">Pratos Principais</string>
    <string name="or">OR</string>
</resources>