<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".login.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_20dp"
        android:layout_marginEnd="@dimen/dim_20dp"
        android:layout_marginTop="@dimen/dim_20dp"
        app:boxBackgroundColor="@color/colorWhite"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_20dp"
        android:layout_marginEnd="@dimen/dim_20dp"
        android:layout_marginTop="@dimen/dim_90dp"
        app:boxBackgroundColor="@color/colorWhite"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_marginStart="@dimen/dim_20dp"
        android:layout_marginEnd="@dimen/dim_20dp"
        android:textSize="@dimen/dim_18sp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/dim_200dp"
        android:padding="@dimen/dim_10dp"
        android:backgroundTint="@color/colorRosa"/>

    <Button
        android:id="@+id/btnRegisterLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_20dp"
        android:layout_marginEnd="@dimen/dim_20dp"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorCinza"
        android:layout_gravity="bottom"
        android:padding="@dimen/dim_10dp"
        android:textSize="@dimen/dim_18sp"
        android:layout_marginBottom="@dimen/dim_100dp"
        android:text="@string/register"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/or"
        android:textSize="@dimen/dim_15sp"/>

</FrameLayout>